--- a/APIsAndJSON/APIsAndJSON.csproj
+++ b/APIsAndJSON/APIsAndJSON.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\net6.0\appsettings.json" />
     <Content Include="bin\Debug\net6.0\jsconfig1.json" />
   </ItemGroup>
 
